--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                                                 <div class="skills-container">
                                                             <img src="./html.jpeg" alt="Description" width="300"
                                                                         height="300" class="html">
-                                                            <img src="./CSS.jpeg" alt="Description" width="300"
+                                                            <img src="./css.jpeg" alt="Description" width="300"
                                                                         height="300" class="css">
                                                             <img src="./java.jpeg" alt="Description" width="300"
                                                                         height="300" class="java">
-                                                            <img src="./python.jpeg" alt="Description" width="300"
+                                                            <img src="./Python.jpeg" alt="Description" width="300"
                                                                         height="300" class="python">
                                                 </div>
                         </section></a>
@@ -164,5 +164,6 @@
 </footer>
 
 </body>
+
 
 </html>
